fixed book manager overflow

--- a/src/app/modules/admin/components/book-manager/book-manager.component.sass
+++ b/src/app/modules/admin/components/book-manager/book-manager.component.sass
@@ -16,5 +16,8 @@
   margin-left: auto
   margin-top: 20px
 
+.book-container
+  height: calc(100vh - 219px)
+  overflow-y: auto
 
 
