--- a/src/app/modules/app/app/app.component.sass
+++ b/src/app/modules/app/app/app.component.sass
@@ -17,4 +17,4 @@
   color: $primary!important
   font-family: $font
   border-top: 1px solid
-
+  background-color: white
